# Dll-Injector

./: .gitignore  CMakeLists.txt  DESIGN.md  EXAMPLE_DLL.md  README.md  build.bat  build_mingw.bat  compile_direct.bat
include/: injector.h  main_window.h  process_manager.h  resource.h
resources/: resource.rc
src/: injector.cpp  main.cpp  main_window.cpp  process_manager.cpp
